--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/assign-records-002.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/assign-records-002.ipynb
@@ -29,7 +29,7 @@
     "3. [Controlled Overlap](#Controlled-Overlap)\n",
     "   1. [Working with Groups](#Working-with-Groups)\n",
     "   2. [Working with a List of Users](#Working-with-a-List-of-Users)\n",
-    "4. [Conclusions](#conclusions)"
+    "4. [Conclusion](#Conclusion)"
    ]
   },
   {
@@ -146,7 +146,7 @@
    "source": [
     "### Enable Telemetry\n",
     "\n",
-    "We gain valuable insights from how you interact with our tutorials. To improve ourselves in offering you the most suitable content, using the following lines of code will help us understand that this tutorial is serving you effectively. Though this is entirely anonymous, you can choose to skip this step if you prefer. For more info, please check out the [Telemetry](../../reference/telemetry.md) page."
+    "We gain valuable insights from how you interact with our tutorials. To improve ourselves in offering you the most suitable content, using the following lines of code will help us understand that this tutorial is serving you effectively. Though this is entirely anonymous, you can choose to skip this step if you prefer. For more info, please check out the [Telemetry](../../../../reference/telemetry.md) page."
    ]
   },
   {
@@ -168,7 +168,7 @@
    "source": [
     "## Pull the Dataset\n",
     "\n",
-    "As we uploaded the dataset we created in the [previous tutorial](#previous_tutorial) to both Argilla and HuggingFace Hub, we can pull the dataset from either of them. Let us see how we can pull the dataset from both.\n",
+    "As we uploaded the dataset we created in the [previous tutorial](./create-dataset-001.ipynb) to both Argilla and HuggingFace Hub, we can pull the dataset from either of them. Let us see how we can pull the dataset from both.\n",
     "\n",
     "### From Argilla\n",
     "\n",
@@ -689,7 +689,7 @@
    "source": [
     "## Conclusion\n",
     "\n",
-    "To sum up, we have shown how to assign records with full and controlled overlap. In scenarios involving controlled overlap, we explored the methods for distributing records among groups of annotators and a specified list of users through the use of `assign_records` and `assign_workspaces`. Additionally, we examined the technique for transferring these allocated records to their respective workspaces."
+    "To sum up, we have shown how to assign records with full and controlled overlap. In scenarios involving controlled overlap, we explored the methods for distributing records among groups of annotators and a specified list of users through the use of `assign_records` and `assign_workspaces`. Additionally, we examined the technique for transferring these allocated records to their respective workspaces. In the [next tutorial](./add-metadata-003.ipynb), we will see how we can add metadata properties to our dataset."
    ]
   }
  ],
