--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/create-dataset-001.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/create-dataset-001.ipynb
@@ -16,7 +16,7 @@
             "source": [
                 "# Creating a `FeedbackDataset`\n",
                 "\n",
-                "This tutorial is part of a series in which we will get to know the `FeedbackDataset`. Before starting this tutorial, you need to do the tutorial on [configuring users and workspaces](/tutorials_and_integrations/tutorials/feedback/end2end_examples/configure-users-and-workspaces.html). In this step, we will show how to configure a `FeedbackDataset` and add `FeedbackRecords` to it. If you need additional context, consult [our practical guide on creating a dataset](../../../../practical_guides/create_update_dataset/create_dataset.md).\n",
+                "This tutorial is part of a series in which we will get to know the `FeedbackDataset`. Before starting this tutorial, you need to do the tutorial on [configuring users and workspaces](./configure-users-and-workspaces-000.ipynb). In this step, we will show how to configure a `FeedbackDataset` and add `FeedbackRecords` to it. If you need additional context, consult [our practical guide on creating a dataset](../../../../practical_guides/create_update_dataset/create_dataset.md).\n",
                 "\n",
                 "![workflow](../../../../_static/tutorials/end2end/base/workflow_create_dataset.svg)\n",
                 "\n",
@@ -43,14 +43,14 @@
             "source": [
                 "## Table of Contents\n",
                 "\n",
-                "1. [Configure a FeedbackDataset](#create-feedbackdataset)\n",
-                "2. [Add FeedbackRecords](#add-records)\n",
-                "   1. [From a Hugging Face dataset](#create-feedbackdataset-datasets)\n",
-                "   2. [From a pandas.DataFrame](#create-feedbackdataset-pandas)\n",
-                "3. [Save and load a FeedbackDataset](#save-the-dataset)\n",
-                "   1. [Push our FeedbackDataset to Argilla](#push-to-argilla)\n",
-                "   2. [Push our FeedbackDataset to the Hugging Face hub](#push-to-hf-hub)\n",
-                "4. [Conclusions](#conclusions)"
+                "1. [Configure a FeedbackDataset](#Configure-a-FeedbackDataset)\n",
+                "2. [Add FeedbackRecords](#Add-FeedbackRecords)\n",
+                "   1. [From a Hugging Face dataset](#From-a-Hugging-Face-dataset)\n",
+                "   2. [From a pandas.DataFrame](#From-a-pandas.DataFrame)\n",
+                "3. [Save and load a FeedbackDataset](#Save-and-load-a-FeedbackDataset)\n",
+                "   1. [Push our FeedbackDataset to Argilla](#From-Argilla)\n",
+                "   2. [Push our FeedbackDataset to the Hugging Face hub](#From-Hugging-Face-hub)\n",
+                "4. [Conclusion](#Conclusion)"
             ]
         },
         {
@@ -110,7 +110,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 1,
+            "execution_count": null,
             "id": "bbbd3c38-1e3c-4d7f-97e6-22dd3b668fc8",
             "metadata": {
                 "editable": true,
@@ -126,74 +126,7 @@
                 },
                 "tags": []
             },
-            "outputs": [
-                {
-                    "name": "stdout",
-                    "output_type": "stream",
-                    "text": [
-                        "Requirement already satisfied: argilla in /Users/agus/github_repos/argilla-io/argilla/.venv/lib/python3.10/site-packages (1.20.0.dev0)\n",
-                        "Requirement already satisfied: httpx<=0.25,>=0.15 in /Users/agus/github_repos/argilla-io/argilla/.venv/lib/python3.10/site-packages (from argilla) (0.23.3)\n",
-                        "Requirement already satisfied: deprecated~=1.2.0 in /Users/agus/github_repos/argilla-io/argilla/.venv/lib/python3.10/site-packages (from argilla) (1.2.14)\n",
-                        "Requirement already satisfied: packaging>=20.0 in /Users/agus/github_repos/argilla-io/argilla/.venv/lib/python3.10/site-packages (from argilla) (21.3)\n",
-                        "Requirement already satisfied: pandas<2.0.0,>=1.0.0 in /Users/agus/github_repos/argilla-io/argilla/.venv/lib/python3.10/site-packages (from argilla) (1.5.3)\n",
-                        "Requirement already satisfied: pydantic<2.0,>=1.10.7 in /Users/agus/github_repos/argilla-io/argilla/.venv/lib/python3.10/site-packages (from argilla) (1.10.9)\n",
-                        "Requirement already satisfied: wrapt<1.15,>=1.13 in /Users/agus/github_repos/argilla-io/argilla/.venv/lib/python3.10/site-packages (from argilla) (1.14.0)\n",
-                        "Requirement already satisfied: numpy<1.24.0 in /Users/agus/github_repos/argilla-io/argilla/.venv/lib/python3.10/site-packages (from argilla) (1.23.5)\n",
-                        "Requirement already satisfied: tqdm>=4.27.0 in /Users/agus/github_repos/argilla-io/argilla/.venv/lib/python3.10/site-packages (from argilla) (4.64.0)\n",
-                        "Requirement already satisfied: backoff in /Users/agus/github_repos/argilla-io/argilla/.venv/lib/python3.10/site-packages (from argilla) (1.11.1)\n",
-                        "Requirement already satisfied: monotonic in /Users/agus/github_repos/argilla-io/argilla/.venv/lib/python3.10/site-packages (from argilla) (1.6)\n",
-                        "Requirement already satisfied: rich!=13.1.0 in /Users/agus/github_repos/argilla-io/argilla/.venv/lib/python3.10/site-packages (from argilla) (13.0.1)\n",
-                        "Requirement already satisfied: typer<0.10.0,>=0.6.0 in /Users/agus/github_repos/argilla-io/argilla/.venv/lib/python3.10/site-packages (from argilla) (0.7.0)\n",
-                        "Requirement already satisfied: certifi in /Users/agus/github_repos/argilla-io/argilla/.venv/lib/python3.10/site-packages (from httpx<=0.25,>=0.15->argilla) (2023.5.7)\n",
-                        "Requirement already satisfied: httpcore<0.17.0,>=0.15.0 in /Users/agus/github_repos/argilla-io/argilla/.venv/lib/python3.10/site-packages (from httpx<=0.25,>=0.15->argilla) (0.16.3)\n",
-                        "Requirement already satisfied: rfc3986<2,>=1.3 in /Users/agus/github_repos/argilla-io/argilla/.venv/lib/python3.10/site-packages (from rfc3986[idna2008]<2,>=1.3->httpx<=0.25,>=0.15->argilla) (1.5.0)\n",
-                        "Requirement already satisfied: sniffio in /Users/agus/github_repos/argilla-io/argilla/.venv/lib/python3.10/site-packages (from httpx<=0.25,>=0.15->argilla) (1.2.0)\n",
-                        "Requirement already satisfied: pyparsing!=3.0.5,>=2.0.2 in /Users/agus/github_repos/argilla-io/argilla/.venv/lib/python3.10/site-packages (from packaging>=20.0->argilla) (3.0.9)\n",
-                        "Requirement already satisfied: python-dateutil>=2.8.1 in /Users/agus/github_repos/argilla-io/argilla/.venv/lib/python3.10/site-packages (from pandas<2.0.0,>=1.0.0->argilla) (2.8.2)\n",
-                        "Requirement already satisfied: pytz>=2020.1 in /Users/agus/github_repos/argilla-io/argilla/.venv/lib/python3.10/site-packages (from pandas<2.0.0,>=1.0.0->argilla) (2022.1)\n",
-                        "Requirement already satisfied: typing-extensions>=4.2.0 in /Users/agus/github_repos/argilla-io/argilla/.venv/lib/python3.10/site-packages (from pydantic<2.0,>=1.10.7->argilla) (4.8.0)\n",
-                        "Requirement already satisfied: commonmark<0.10.0,>=0.9.0 in /Users/agus/github_repos/argilla-io/argilla/.venv/lib/python3.10/site-packages (from rich!=13.1.0->argilla) (0.9.1)\n",
-                        "Requirement already satisfied: pygments<3.0.0,>=2.6.0 in /Users/agus/github_repos/argilla-io/argilla/.venv/lib/python3.10/site-packages (from rich!=13.1.0->argilla) (2.15.1)\n",
-                        "Requirement already satisfied: click<9.0.0,>=7.1.1 in /Users/agus/github_repos/argilla-io/argilla/.venv/lib/python3.10/site-packages (from typer<0.10.0,>=0.6.0->argilla) (8.1.3)\n",
-                        "Requirement already satisfied: h11<0.15,>=0.13 in /Users/agus/github_repos/argilla-io/argilla/.venv/lib/python3.10/site-packages (from httpcore<0.17.0,>=0.15.0->httpx<=0.25,>=0.15->argilla) (0.13.0)\n",
-                        "Requirement already satisfied: anyio<5.0,>=3.0 in /Users/agus/github_repos/argilla-io/argilla/.venv/lib/python3.10/site-packages (from httpcore<0.17.0,>=0.15.0->httpx<=0.25,>=0.15->argilla) (3.7.1)\n",
-                        "Requirement already satisfied: six>=1.5 in /Users/agus/github_repos/argilla-io/argilla/.venv/lib/python3.10/site-packages (from python-dateutil>=2.8.1->pandas<2.0.0,>=1.0.0->argilla) (1.16.0)\n",
-                        "Requirement already satisfied: idna in /Users/agus/github_repos/argilla-io/argilla/.venv/lib/python3.10/site-packages (from rfc3986[idna2008]<2,>=1.3->httpx<=0.25,>=0.15->argilla) (3.3)\n",
-                        "Requirement already satisfied: exceptiongroup in /Users/agus/github_repos/argilla-io/argilla/.venv/lib/python3.10/site-packages (from anyio<5.0,>=3.0->httpcore<0.17.0,>=0.15.0->httpx<=0.25,>=0.15->argilla) (1.1.1)\n",
-                        "Requirement already satisfied: datasets in /Users/agus/github_repos/argilla-io/argilla/.venv/lib/python3.10/site-packages (2.14.7)\n",
-                        "Requirement already satisfied: numpy>=1.17 in /Users/agus/github_repos/argilla-io/argilla/.venv/lib/python3.10/site-packages (from datasets) (1.23.5)\n",
-                        "Requirement already satisfied: pyarrow>=8.0.0 in /Users/agus/github_repos/argilla-io/argilla/.venv/lib/python3.10/site-packages (from datasets) (14.0.1)\n",
-                        "Requirement already satisfied: pyarrow-hotfix in /Users/agus/github_repos/argilla-io/argilla/.venv/lib/python3.10/site-packages (from datasets) (0.5)\n",
-                        "Requirement already satisfied: dill<0.3.8,>=0.3.0 in /Users/agus/github_repos/argilla-io/argilla/.venv/lib/python3.10/site-packages (from datasets) (0.3.7)\n",
-                        "Requirement already satisfied: pandas in /Users/agus/github_repos/argilla-io/argilla/.venv/lib/python3.10/site-packages (from datasets) (1.5.3)\n",
-                        "Requirement already satisfied: requests>=2.19.0 in /Users/agus/github_repos/argilla-io/argilla/.venv/lib/python3.10/site-packages (from datasets) (2.31.0)\n",
-                        "Requirement already satisfied: tqdm>=4.62.1 in /Users/agus/github_repos/argilla-io/argilla/.venv/lib/python3.10/site-packages (from datasets) (4.64.0)\n",
-                        "Requirement already satisfied: xxhash in /Users/agus/github_repos/argilla-io/argilla/.venv/lib/python3.10/site-packages (from datasets) (3.4.1)\n",
-                        "Requirement already satisfied: multiprocess in /Users/agus/github_repos/argilla-io/argilla/.venv/lib/python3.10/site-packages (from datasets) (0.70.15)\n",
-                        "Requirement already satisfied: fsspec<=2023.10.0,>=2023.1.0 in /Users/agus/github_repos/argilla-io/argilla/.venv/lib/python3.10/site-packages (from fsspec[http]<=2023.10.0,>=2023.1.0->datasets) (2023.10.0)\n",
-                        "Requirement already satisfied: aiohttp in /Users/agus/github_repos/argilla-io/argilla/.venv/lib/python3.10/site-packages (from datasets) (3.8.6)\n",
-                        "Requirement already satisfied: huggingface-hub<1.0.0,>=0.14.0 in /Users/agus/github_repos/argilla-io/argilla/.venv/lib/python3.10/site-packages (from datasets) (0.19.3)\n",
-                        "Requirement already satisfied: packaging in /Users/agus/github_repos/argilla-io/argilla/.venv/lib/python3.10/site-packages (from datasets) (21.3)\n",
-                        "Requirement already satisfied: pyyaml>=5.1 in /Users/agus/github_repos/argilla-io/argilla/.venv/lib/python3.10/site-packages (from datasets) (6.0)\n",
-                        "Requirement already satisfied: attrs>=17.3.0 in /Users/agus/github_repos/argilla-io/argilla/.venv/lib/python3.10/site-packages (from aiohttp->datasets) (23.1.0)\n",
-                        "Requirement already satisfied: charset-normalizer<4.0,>=2.0 in /Users/agus/github_repos/argilla-io/argilla/.venv/lib/python3.10/site-packages (from aiohttp->datasets) (2.1.0)\n",
-                        "Requirement already satisfied: multidict<7.0,>=4.5 in /Users/agus/github_repos/argilla-io/argilla/.venv/lib/python3.10/site-packages (from aiohttp->datasets) (6.0.4)\n",
-                        "Requirement already satisfied: async-timeout<5.0,>=4.0.0a3 in /Users/agus/github_repos/argilla-io/argilla/.venv/lib/python3.10/site-packages (from aiohttp->datasets) (4.0.3)\n",
-                        "Requirement already satisfied: yarl<2.0,>=1.0 in /Users/agus/github_repos/argilla-io/argilla/.venv/lib/python3.10/site-packages (from aiohttp->datasets) (1.9.2)\n",
-                        "Requirement already satisfied: frozenlist>=1.1.1 in /Users/agus/github_repos/argilla-io/argilla/.venv/lib/python3.10/site-packages (from aiohttp->datasets) (1.4.0)\n",
-                        "Requirement already satisfied: aiosignal>=1.1.2 in /Users/agus/github_repos/argilla-io/argilla/.venv/lib/python3.10/site-packages (from aiohttp->datasets) (1.3.1)\n",
-                        "Requirement already satisfied: filelock in /Users/agus/github_repos/argilla-io/argilla/.venv/lib/python3.10/site-packages (from huggingface-hub<1.0.0,>=0.14.0->datasets) (3.13.1)\n",
-                        "Requirement already satisfied: typing-extensions>=3.7.4.3 in /Users/agus/github_repos/argilla-io/argilla/.venv/lib/python3.10/site-packages (from huggingface-hub<1.0.0,>=0.14.0->datasets) (4.8.0)\n",
-                        "Requirement already satisfied: pyparsing!=3.0.5,>=2.0.2 in /Users/agus/github_repos/argilla-io/argilla/.venv/lib/python3.10/site-packages (from packaging->datasets) (3.0.9)\n",
-                        "Requirement already satisfied: idna<4,>=2.5 in /Users/agus/github_repos/argilla-io/argilla/.venv/lib/python3.10/site-packages (from requests>=2.19.0->datasets) (3.3)\n",
-                        "Requirement already satisfied: urllib3<3,>=1.21.1 in /Users/agus/github_repos/argilla-io/argilla/.venv/lib/python3.10/site-packages (from requests>=2.19.0->datasets) (1.26.9)\n",
-                        "Requirement already satisfied: certifi>=2017.4.17 in /Users/agus/github_repos/argilla-io/argilla/.venv/lib/python3.10/site-packages (from requests>=2.19.0->datasets) (2023.5.7)\n",
-                        "Requirement already satisfied: python-dateutil>=2.8.1 in /Users/agus/github_repos/argilla-io/argilla/.venv/lib/python3.10/site-packages (from pandas->datasets) (2.8.2)\n",
-                        "Requirement already satisfied: pytz>=2020.1 in /Users/agus/github_repos/argilla-io/argilla/.venv/lib/python3.10/site-packages (from pandas->datasets) (2022.1)\n",
-                        "Requirement already satisfied: six>=1.5 in /Users/agus/github_repos/argilla-io/argilla/.venv/lib/python3.10/site-packages (from python-dateutil>=2.8.1->pandas->datasets) (1.16.0)\n"
-                    ]
-                }
-            ],
+            "outputs": [],
             "source": [
                 "!pip install argilla\n",
                 "!pip install datasets"
@@ -308,7 +241,7 @@
             "source": [
                 "### Enable Telemetry\n",
                 "\n",
-                "We gain valuable insights from how you interact with our tutorials. To improve ourselves in offering you the most suitable content, using the following lines of code will help us understand that this tutorial is serving you effectively. Though this is entirely anonymous, you can choose to skip this step if you prefer. For more info, please check out the [Telemetry](../../reference/telemetry.md) page."
+                "We gain valuable insights from how you interact with our tutorials. To improve ourselves in offering you the most suitable content, using the following lines of code will help us understand that this tutorial is serving you effectively. Though this is entirely anonymous, you can choose to skip this step if you prefer. For more info, please check out the [Telemetry](../../../../reference/telemetry.md) page."
             ]
         },
         {
@@ -579,7 +512,7 @@
                 "tags": []
             },
             "source": [
-                "The next step once we have our `FeedbackDataset` created is adding the [`FeedbackRecords`](https://docs.argilla.io/en/latest/getting_started/cheatsheet.html#create-records) to it."
+                "The next step once we have our `FeedbackDataset` created is adding the [FeedbackRecords](https://docs.argilla.io/en/latest/getting_started/cheatsheet.html#create-records) to it."
             ]
         },
         {
@@ -1048,7 +981,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 16,
+            "execution_count": null,
             "id": "1fabcc89-323f-4f4f-9ab9-4b778dd93474",
             "metadata": {
                 "editable": true,
@@ -1064,18 +997,7 @@
                 },
                 "tags": []
             },
-            "outputs": [
-                {
-                    "name": "stdout",
-                    "output_type": "stream",
-                    "text": [
-                        "Token will not been saved to git credential helper. Pass `add_to_git_credential=True` if you want to set the git credential as well.\n",
-                        "Token is valid (permission: write).\n",
-                        "Your token has been saved to /Users/agus/.cache/huggingface/token\n",
-                        "Login successful\n"
-                    ]
-                }
-            ],
+            "outputs": [],
             "source": [
                 "from huggingface_hub import login\n",
                 "\n",
@@ -1183,7 +1105,7 @@
                 "We created a `FeedbackDataset` for text classification with a `LabelQuestion`, from data stored as a `datasets.Dataset` and a `pandas.DataFrame`.\n",
                 "This dataset was pushed both to `Argilla` where we can curate and label the records, and finally pushed it to the 🤗`hub`.\n",
                 "\n",
-                "To learn more about how to work with the `FeedbackDataset` check the [cheatsheet](https://docs.argilla.io/en/latest/getting_started/cheatsheet.html#cheatsheet)."
+                "To learn more about how to work with the `FeedbackDataset` check the [cheatsheet](https://docs.argilla.io/en/latest/getting_started/cheatsheet.html#cheatsheet). To continue with assigning records to annotators, you can refer to the [next tutorial](./assign-records-002.ipynb)."
             ]
         }
     ],
