--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/filter-and-query-008.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/filter-and-query-008.ipynb
@@ -137,7 +137,7 @@
    "source": [
     "### Enable Telemetry\n",
     "\n",
-    "We gain valuable insights from how you interact with our tutorials. To improve ourselves in offering you the most suitable content, using the following lines of code will help us understand that this tutorial is serving you effectively. Though this is entirely anonymous, you can choose to skip this step if you prefer. For more info, please check out the [Telemetry](../../reference/telemetry.md) page."
+    "We gain valuable insights from how you interact with our tutorials. To improve ourselves in offering you the most suitable content, using the following lines of code will help us understand that this tutorial is serving you effectively. Though this is entirely anonymous, you can choose to skip this step if you prefer. For more info, please check out the [Telemetry](../../../../reference/telemetry.md) page."
    ]
   },
   {
@@ -159,7 +159,7 @@
    "source": [
     "## Pull the Dataset\n",
     "\n",
-    "As we uploaded the dataset we created in the [previous tutorial](#previous_tutorial) to both Argilla and HuggingFace Hub, we can pull the dataset from either of them, however, we only allow filtering and querying on `RemoteFeedbackDataset`, hence we will only pull the dataset from Argilla.\n",
+    "As we uploaded the dataset we created in the [previous tutorial](./create-dataset-001.ipynb) to both Argilla and HuggingFace Hub, we can pull the dataset from either of them, however, we only allow filtering and querying on `RemoteFeedbackDataset`, hence we will only pull the dataset from Argilla.\n",
     "\n",
     "### From Argilla\n",
     "\n",
@@ -198,24 +198,6 @@
     "\n",
     "</div>"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "RemoteFeedbackRecord(id=UUID('873a60bd-e371-434d-9d05-8c4cc97ff6cf'), client=<httpx.Client object at 0x000001BE86CB2970>, fields={'text': \"Wall St. Bears Claw Back Into the Black (Reuters) Reuters - Short-sellers, Wall Street's dwindling\\\\band of ultra-cynics, are seeing green again.\"}, metadata={'group': 'group-2', 'length': 144, 'length_std': 144.0}, vectors={}, responses=[], suggestions=(), external_id='record-0')"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -652,7 +634,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Conclusions"
+    "## Conclusion"
    ]
   },
   {
