update to run with script

--- a/docs/_source/getting_started/quickstart_workflow_feedback.ipynb
+++ b/docs/_source/getting_started/quickstart_workflow_feedback.ipynb
@@ -249,7 +249,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset.push_to_argilla(name=\"my-first-dataset\", workspace=\"argilla\")"
+    "try:\n",
+    "    dataset.push_to_argilla(name=\"my-first-dataset\", workspace=\"argilla\")\n",
+    "except:\n",
+    "    pass"
    ]
   },
   {
