⌨️ feat: improve keyboard navigation (#4215)
### Improve annotation shortcuts

![Screenshot 2023-12-19 at 00 05
26](https://github.com/argilla-io/argilla/assets/7398909/352bb206-323f-43fc-af44-f891bae1a7fe)

---------

Co-authored-by: leire <leire@recogn.ai>

--- a/frontend/translation/en.json
+++ b/frontend/translation/en.json
@@ -16,10 +16,8 @@
   "shortcuts": {
     "label": "Shortcuts",
     "pagination": {
-      "go_to_previous_record": "Previous (ctrl + ←)",
-      "go_to_next_record": "Next (ctrl + →)",
-      "go_to_previous_record_mac": "Previous (⌘ cmd + ←)",
-      "go_to_next_record_mac": "Next (⌘ cmd + →)"
+      "go_to_previous_record": "Previous (←)",
+      "go_to_next_record": "Next (→)"
     },
     "questions_form": {
       "draft_mac": "Save as draft (⌘ cmd + s)",
